feat: add main components for Voa Trainee website
- Implemented Cta component for call-to-action buttons.
- Created Header component with logo, navigation links, and CTA.
- Developed Links component to display menu items.
- Added Logo component for branding.
- Built AboutVoaTrainee section with video and mentor profiles.
- Created FaqSection for frequently asked questions with toggle functionality.
- Developed FinalContactSection for user engagement.
- Implemented Footer with social media links and branding.
- Created HeroSection for introductory content and mentor images.
- Built MentorshipAudience section to target specific user groups.
- Developed TestimonialsSection to showcase user feedback.
- Implemented VoaTraineeJourney section to outline the mentorship process.
- Created WhatsappCommunity section for user engagement via WhatsApp.
- Added menuItems data structure for navigation.
- Defined IMenuItem type for menu item structure.
- Configured Tailwind CSS for custom styles and background images.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,9 +14,14 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+    --background: #ededed;
+    --foreground: #0a0a0a;
+    --bg-first-section: linear-gradient(90deg, #64D0EF 0%, #0050B0 76%);
   }
+}
+
+.bg-first-section {
+  background: var(--bg-first-section);
 }
 
 body {
