--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,7 +7,7 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #ededed;
+    --background: linear-gradient(120deg, #fff 0%, #eee 100%);
     --foreground: #0a0a0a;
     --bg-first-section: linear-gradient(90deg, #64D0EF 0%, #0050B0 76%);
   }
